# credence

./: Cargo.toml  README.md  TODO
cli/: Cargo.toml
cli/src/: errors.rs  main.rs  run.rs
cli/src/commands/: mod.rs  root.rs  start.rs
documentation/: advanced.md  basics.md
scripts/: _functions  build  build-docs  build-pgo-profiles  install-for-user
